Responsive Resume Page

--- a/index.html
+++ b/index.html
@@ -4,22 +4,26 @@
         <title>Resume Natthalada</title>
         <link rel="stylesheet" href="main.css">
         <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Racing+Sans+One&display=swap" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
     </head>
 
 <body>
-<h1 id="name">Miss Natthalada Prombut</h1>
+<h1 id="name">Miss Natthalada Prombut&nbsp;&nbsp;<a href="#edit_name" class="button"><span class="fas fa-edit"></span></a></h1>
+
 
 <div class="header">
   <div id="picture" >
-  <img src="img/bb.png" width="500em" height=""/>  
+  <img src="img/bb.png"/>
   </div>
 
   <div id="data">
-    <h2><span class="data_a">Nickname :</span> Bebiiez</h2>
-    <h2><span class="data_a">Email :</span> natthalada.p@gmail.com</h2>
-    <h2><span class="data_a">Phone :</span> 086-28433XX</h2>
-    <h2><span class="data_a">Birthday :</span> 06 April 1994</h2>
-    <h2><span class="data_a">Work Experiencen :</span> Officer in PhillipCapital</h2>
+    <h1><span class="data_a">nickname is Bebiiez.</span></h1>
+    <h2><span class="data_a"><i class="fas fa-envelope"></i>&nbsp;&nbsp;Email</span> Natthalada.P@gmail.com</h2>
+    <h2><span class="data_a"><i class="fas fa-mobile-alt"></i>&nbsp;&nbsp;Phone</span> 086-28433XX</h2>
+    <h2><span class="data_a"><i class="fas fa-map-marker-alt"></i>&nbsp;&nbsp;Address</span> Phayathai, Bangkok</h2>
+    <h2><span class="data_a"><i class="fas fa-birthday-cake"></i>&nbsp;&nbsp;Birthday&nbsp;&nbsp;&nbsp;</span> 06 April 1994</h2>
+    
     
   </div>
   
@@ -28,18 +32,21 @@
 <br class="clear" />
 
 <div id="education">
-<h2>Education :</h2> 
+<button class="btn">WORK EXPERIENCEN & EDUCATION</button> 
     <ul>
-        <li>2012-2015 Faculty of Management Sciences, Prince of Songkla University
-        <br>Bachelor of Business Administration (Information System)</li>
-        <li>2006-2011 Hatyaiwittayalai School (Sci-Math)</li>
+        <li><img class="logo" src="img/pst.png"/>  2018-2019 Coordinate officer in PhillipCapital</li>
+        <li><img class="logo" src="img/dts.png"/>  2017-2018 Secretary in DTS insure broker co.,ltd</li>
+        <li><img class="logo" src="img/psu.png"/>  2012-2015 Faculty of Management Sciences, Prince of Songkla University, 
+        Bachelor of Business Administration (Information System)</li>
+        <li><img class="logo" src="img/yw.png"/>  2006-2011 Hatyaiwittayalai School (Sci-Math)</li>
     </ul>    
 </div>
 
 <br class="clear" />
 
 <div id="skill">
-    <h2>SKILL AND QUALIFICATION</h2>
+<button class="btn">SKILL AND QUALIFICATION</button>
+<button style="background-color: #FF0000; color:#FFFFFF;" class="btn">+</button>
     <ul>
             <li>Can use Microsoft Office and Adobe Photoshop.</li> 
             <li>Can use HTML and PHP.</li>
@@ -47,6 +54,14 @@
             <li>Responsible, hard-working, coordination skill, and service minded.</li>
     </ul>
 </div>
+
+<br class="clear" />
+
+<footer>
+    <a id="contact" class="fab fa-facebook-square" href="https://www.facebook.com/bb.bebiiez"></a> &nbsp;&nbsp;
+    <a id="contact" class="fab fa-instagram" href="https://www.instagram.com/bbeiiez/"></a>
+    <p>Resume project by Natthalada Prombut</p>
+</footer>
 
 </body>
 </html>
